# buildworker-scripts

./: .gitignore  README.md  setup.cfg  setup.py
buildworker_scripts/scripts/: store_artifacts.py
buildworker_scripts/utils/: logutils.py  process.py  s3session.py
