[metadata]
name = buildworker-scripts
version = 0.1.0
license = MIT
license_files = LICENSE
author = Matt Madison
author_email = matt@madison.systems
url = https://github.com/madisongh/buildworker-scripts

[options]
packages = find:
install_requires =
    aws-secretsmanager-caching
    boto3
    botocore

[options.entry_points]
console_scripts =
    store-artifacts = buildworker_scripts.scripts.store_artifacts:main
